--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,29 +1,41 @@
 * {
-  margin: 0;
-  padding: 0;
-  border: 0;
-  outline: 0;
   box-sizing: border-box;
-  list-style: none;
-  text-decoration: none;
+  padding: 0;
+  margin: 0;
 }
 
-html {
-  scroll-behavior: smooth;
-}
-
-::-webkit-scrollbar {
-  display: none;
-}
-
+html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
-  background-color: black;
-  color: #bbb;
-  line-height: 1.7;
+  font-size: 10px;
 }
 
 a {
+  text-decoration: none;
   color: inherit;
+}
+
+.theme {
+  transition: 1s all ease;
+}
+
+.light {
+  background-color: white;
+  color: #111;
+}
+
+.dark {
+  background-color: #111;
+  color: #bbb;
+}
+
+.container {
+  max-width: 1366px;
+  min-height: 100vh;
+  margin: 0 auto;
+  padding: 0 6rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
